agregue el boton guinda para agregar contribuciones

--- a/src/app/shared/components/contribuciones/contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/contribuciones.component.html
@@ -26,7 +26,8 @@
         />
       </div>
       <div class="col-auto">
-        <a class="ms-auto links" routerLink="/formulario-contribucion">Agregar contribucion</a>
+        <button type="button" class="btn boton-principal" routerLink="/formulario-contribucion"> Agregar contribución</button>
+        <!--<a class="ms-auto links" routerLink="/formulario-contribucion">Agregar contribucion</a>-->
       </div>
   </div>
   <ng-container *ngIf="selected===0">
