agregegue boton guinda y quite algunas columnas que aparecen vacias

--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -26,7 +26,8 @@
       />
     </div>
     <div class="col-auto">
-      <a class="ms-auto links" [routerLink]="['/formulario-contribucion',1]">Agregar contribucion tipo Impuesto</a>
+      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',1]"> Agregar contribución</button>
+      <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',1]">Agregar contribucion tipo Impuesto</a>-->
     </div>
   </div>
 <ng-container *ngIf=" selected===1">
@@ -39,9 +40,9 @@
           <tr>
             <th>Codigo</th>
             <th>Descripcion</th>
-            <th>Tipo</th>
-            <th>Tipo Pago</th>
-            <th>Cantidad</th>
+            <!--<th>Tipo</th>-->
+            <th>Pago</th>
+            <!--<th>Cantidad</th>-->
             <th
               class="text-center"
               *ngIf="
@@ -63,9 +64,9 @@
           <tr *ngFor="let contribucion of contribucionesImpuestos">
             <td>{{ contribucion.codigo_contribucion}}</td>
             <td>{{contribucion.scatalogo_impuesto}} {{ contribucion.concepto_contribucion}}</td>
-            <td>{{ contribucion.nivelContribucionS}} </td>
+            <!--<td>{{ contribucion.nivelContribucionS}} </td>-->
             <td>{{ contribucion.tipo_pago}} </td>
-            <td>{{ contribucion.cantidad}} </td>
+            <!--<td>{{ contribucion.cantidad}} </td>-->
             <td
               *ngIf="
                 authService.hasRole([
