--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -38,10 +38,10 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribucionesImpuestos!= undefined && contribucionesImpuestos.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>Codigo</th>
-            <th>Descripcion</th>
+            <th>CÓDIGO</th>
+            <th>DESCRIPCIÓN</th>
             <!--<th>Tipo</th>-->
-            <th>Pago</th>
+            <th>PAGO</th>
             <!--<th>Cantidad</th>-->
             <th
               class="text-center"
