--- a/src/app/shared/components/contribuciones/contribucion-multas/contribucion-multas.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas/contribucion-multas.component.html
@@ -26,7 +26,8 @@
       />
     </div>
     <div class="col-auto">
-      <a class="ms-auto links" [routerLink]="['/formulario-contribucion',4]">Agregar multa</a>
+      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',4]"> Agregar contribución</button>
+      <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',4]">Agregar multa</a>-->
     </div>
   </div>
 
@@ -38,11 +39,11 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribucionesMultas!= undefined && contribucionesMultas.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>Codigo</th>
-            <th>Descripcion</th>
-            <th>Tipo</th>
-            <th>Tipo Pago</th>
-            <th>Cantidad</th>
+            <th>CÓDIGO</th>
+            <th>DESCRIPCIÓN</th>
+            <!--<th>TIPO</th>-->
+            <th>PAGO</th>
+            <th>CANTIDAD</th>
             <th
               class="text-center"
               *ngIf="
@@ -64,7 +65,7 @@
           <tr *ngFor="let contribucion of contribucionesMultas">
             <td>{{ contribucion.codigo_contribucion}}</td>
             <td>{{contribucion.scatalogo}} {{ contribucion.concepto_contribucion}}</td>
-            <td>{{ contribucion.nivelContribucionS}} </td>
+            <!--<td>{{ contribucion.nivelContribucionS}} </td>-->
             <td>{{ contribucion.tipo_pago}} </td>
             <td>{{ contribucion.cantidad}} </td>
             <td
