--- a/src/app/shared/components/contribuciones/contribucion-multas-vehicular/contribucion-multas-vehicular.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas-vehicular/contribucion-multas-vehicular.component.html
@@ -26,7 +26,8 @@
       />
     </div>
     <div class="col-auto">
-      <a class="ms-auto links" [routerLink]="['/formulario-contribucion',6]">Agregar Multa Vehicular</a>
+      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',6]"> Agregar contribución</button>
+      <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',6]">Agregar Multa Vehicular</a>-->
     </div>
   </div>
 
@@ -38,12 +39,12 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribucionesMVehicular!= undefined && contribucionesMVehicular.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>Codigo</th>
-            <th>Descripcion</th>
-            <th>Tipo</th>
-            <th>Tipo Pago</th>
-            <th>Tipo Vehiculo</th>
-            <th>Detalles</th>
+            <th>CÓDIGO</th>
+            <th>DESCRIPCIÓN</th>
+            <!--<th>TIPO</th>-->
+            <th>PAGO</th>
+            <th>VEHICULO</th>
+            <th>DETALLES</th>
             <th
               class="text-center"
               *ngIf="
@@ -65,7 +66,7 @@
           <tr *ngFor="let contribucion of contribucionesMVehicular">
             <td>{{ contribucion.codigo_contribucion}}</td>
             <td>{{contribucion.scatalogo}} {{ contribucion.concepto_contribucion}}</td>
-            <td>{{ contribucion.nivelContribucionS}} </td>
+            <!--<td>{{ contribucion.nivelContribucionS}} </td>-->
             <td>{{ contribucion.tipo_pago}} </td>
             <td>{{ contribucion.svehiculo}} </td>
             <td>
