--- a/src/app/shared/components/contribuciones/contribucion-otros-productos/contribucion-otros-productos.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-otros-productos/contribucion-otros-productos.component.html
@@ -26,7 +26,8 @@
       />
     </div>
     <div class="col-auto">
-      <a class="ms-auto links" [routerLink]="['/formulario-contribucion',7]">Agregar contribucion Otros Productos</a>
+      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',7]"> Agregar contribución</button>
+      <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',7]">Agregar contribucion Otros Productos</a>-->
     </div>
   </div>
 
@@ -38,12 +39,12 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribucionesOtrosP!= undefined && contribucionesOtrosP.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>Codigo</th>
-            <th>Descripcion</th>
-            <th>Tipo</th>
-            <th>Tipo Pago</th>
-            <th>Periodicidad</th>
-            <th>Cantidad</th>
+            <th>CÓDIGO</th>
+            <th>DESCRIPCIÓN</th>
+            <!--<th>TIPO</th>-->
+            <th>PAGO</th>
+            <th>PERIODICIDAD</th>
+            <th>CANTIDAD</th>
             <th
               class="text-center"
               *ngIf="
@@ -65,7 +66,7 @@
           <tr *ngFor="let contribucion of contribucionesOtrosP">
             <td>{{ contribucion.codigo_contribucion}}</td>
             <td>{{contribucion.scatalogo_otros_productos}} {{ contribucion.concepto_contribucion}}</td>
-            <td>{{ contribucion.nivelContribucionS}} </td>
+            <!--<td>{{ contribucion.nivelContribucionS}} </td>-->
             <td>{{ contribucion.tipo_pago}} </td>
             <td>{{ contribucion.periodicidad}} </td>
             <td>{{ contribucion.cantidad}} </td>
