--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,7 +101,7 @@
                   style="color: rgb(36, 115, 242, 0.8)"
                 ></i>
               </div>
-              <div class="col-9">Development</div>
+              <div class="col-9"><a routerLink="/reportes-contribuyentes">Contribuyentes</a></div>
             </div>
           </li>
           <li class="teams-item">
