cambie los encabezados a mayusculas

--- a/src/app/shared/components/contribuyentes/contribuyentes.component.html
+++ b/src/app/shared/components/contribuyentes/contribuyentes.component.html
@@ -75,10 +75,10 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribuyentesFisicas!= undefined && contribuyentesFisicas.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>RMC</th>
+            <th>RFC</th>
             <th>CURP</th>
-            <th>Nombre</th>
-            <th>Direccion</th>
+            <th>NOMBRE</th>
+            <th>DIRECIÓN</th>
             <th
               class="text-center"
               *ngIf="
@@ -156,9 +156,9 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribuyentesMorales!= undefined && contribuyentesMorales.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>RMC</th>
-            <th>Razón social</th>
-            <th>Dirección</th>
+            <th>RFC</th>
+            <th>RAZÓN SOCIAL</th>
+            <th>DIRECCIÓN</th>
             <th
               class="text-center"
               *ngIf="
