el  titulo para agregar una contribucion ahora dira "AGREGAR CONTRIBUCION DE TIPO..."

--- a/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/form-contribuciones/form-contribuciones.component.html
@@ -12,7 +12,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR IMPUESTO CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO IMPUESTO</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
@@ -70,7 +70,7 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR DERECHO GENERAL  CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO DERECHO GENERAL</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
@@ -136,7 +136,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR DERECHO LICENCIA  CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO DERECHO LICENCIA</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
@@ -197,7 +197,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR MULTA GENERAL CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO MULTA GENERAL</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
@@ -255,7 +255,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR MULTA EBRIEDAD CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO MULTA EBRIEDAD</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
@@ -318,7 +318,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR MULTA VEHICULAR CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO MULTA VEHICULAR</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
@@ -389,7 +389,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-                <h5 class="text-center mb-4">AÑADIR OTROS PRODUCTOS CONTRIBUCION</h5>
+                <h5 class="text-center mb-4">AÑADIR CONTRIBUCION DE TIPO OTROS PRODUCTOS</h5>
 
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
