wl boton descargar lista lo puse en azul y la cabecera de contribcioes las puse en mayusculas

--- a/src/app/shared/components/contribuyentes/contribuyentes.component.html
+++ b/src/app/shared/components/contribuyentes/contribuyentes.component.html
@@ -62,9 +62,8 @@
         href="{{
           urlEndPoint
         }}/api/reportes/listaContribuyenteFisica/exportarPDF"
-        class="btn btn-danger btn-sm ml-auto"
-        ><i class="bi bi-printer"></i>Descargar lista</a
-      >
+        class="btn btn-danger btn-sm ml-auto" style="background-color:blue; border-color: blue;"
+        ><i class="bi bi-printer"></i>Descargar lista</a>
     </div>
   </div>
   <ng-container *ngIf="banderaTipo; else blockMoral">
