--- a/src/app/shared/components/contribuciones/contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/contribuciones.component.html
@@ -38,10 +38,10 @@
       <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribuciones!= undefined && contribuciones.length>0">
         <thead class="cabecera text-white">
           <tr>
-            <th>Codigo</th>
-            <th>Descripcion</th>
-            <th>Tipo</th>
-            <th>Detalles</th>
+            <th>CÓDIGO</th>
+            <th>DESCRIPCIÓN</th>
+            <th>TIPO</th>
+            <th>DETALLES</th>
             <th
               class="text-center"
               *ngIf="
