--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -144,7 +144,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                {{authService.usuario.username}}
+                {{authService.usuario.nombre_empleado}}
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end color-border"
