se agrego el descargar lista de todas las contribuciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
             <a class="navigation-link" routerLink="generarLinea-captura">
               <div class="row">
                 <div class="col-2">
-                  <i class="fas fa-users"></i>
+                  <i class="fa fa-money" aria-hidden="true"></i>
                 </div>
                 <div class="col-9">Cobrar Contribucion</div>
               </div>
@@ -50,7 +50,7 @@
             <a class="navigation-link" routerLink="contribuyentes">
               <div class="row">
                 <div class="col-2">
-                  <i class="fas fa-chart-pie"></i>
+                  <i class="fa fa-child" aria-hidden="true"></i>
                 </div>
                 <div class="col-9">Contribuyentes</div>
               </div>
@@ -60,7 +60,7 @@
             <a class="navigation-link" routerLink="empleados">
               <div class="row">
                 <div class="col-2">
-                  <i class="fas fa-calendar-alt"></i>
+                  <i class="fa fa-address-book" aria-hidden="true"></i>
                 </div>
                 <div class="col-9">Empleados</div>
               </div>
@@ -70,7 +70,7 @@
             <a class="navigation-link" routerLink="usuario">
               <div class="row">
                 <div class="col-2">
-                  <i class="fas fa-address-book"></i>
+                  <i class="fa fa-user-circle" aria-hidden="true"></i>
                 </div>
                 <div class="col-9">Usuarios</div>
               </div>
@@ -102,28 +102,6 @@
                 ></i>
               </div>
               <div class="col-9"><a routerLink="/reportes-contribuyentes">Contribuyentes</a></div>
-            </div>
-          </li>
-          <li class="teams-item">
-            <div class="row">
-              <div class="col-1">
-                <i
-                  class="fas fa-circle"
-                  style="color: rgb(51, 242, 105, 0.8)"
-                ></i>
-              </div>
-              <div class="col-9">Webmaster</div>
-            </div>
-          </li>
-          <li class="teams-item">
-            <div class="row">
-              <div class="col-1">
-                <i
-                  class="fas fa-circle"
-                  style="color: rgb(237, 181, 28, 0.8)"
-                ></i>
-              </div>
-              <div class="col-9">Administration</div>
             </div>
           </li>
         </ul>
