--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -30,6 +30,19 @@
       <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',1]">Agregar contribucion tipo Impuesto</a>-->
     </div>
   </div>
+  <div class="d-flex flex-row-reverse">
+
+    <div>
+      <span></span>
+      <a
+        href="{{
+          urlEndPoint
+        }}/api/reportes/listaContribucionImpuesto/exportarPDF"
+        class="btn btn-danger btn-sm ml-auto"
+        ><i class="bi bi-printer"></i>Descargar lista</a
+      >
+    </div>
+  </div>
 <ng-container *ngIf=" selected===1">
   <div class="table-wrapper">
     <div class="alert alert-info my-4 text-center" *ngIf="contribucionesImpuestos!= undefined && contribucionesImpuestos.length==0">
