--- a/src/app/shared/components/contribuciones/contribucion-otros-productos/contribucion-otros-productos.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-otros-productos/contribucion-otros-productos.component.html
@@ -30,7 +30,19 @@
       <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',7]">Agregar contribucion Otros Productos</a>-->
     </div>
   </div>
+  <div class="d-flex flex-row-reverse">
 
+    <div>
+      <span></span>
+      <a
+        href="{{
+          urlEndPoint
+        }}/api/reportes/listaContribucionOtrosProductos/exportarPDF"
+        class="btn btn-danger btn-sm ml-auto"
+        ><i class="bi bi-printer"></i>Descargar lista</a
+      >
+    </div>
+  </div>
 <ng-container *ngIf=" selected===7">
   <div class="table-wrapper">
     <div class="alert alert-info my-4 text-center" *ngIf="contribucionesOtrosP!= undefined && contribucionesOtrosP.length==0">
@@ -68,7 +80,7 @@
             <td>{{contribucion.scatalogo_otros_productos}} {{ contribucion.concepto_contribucion}}</td>
             <!--<td>{{ contribucion.nivelContribucionS}} </td>-->
             <td>{{ contribucion.tipo_pago}} </td>
-            <td>{{ contribucion.periodicidad}} </td>
+            <td>{{ contribucion.speriodicidad}} </td>
             <td>{{ contribucion.cantidad}} </td>
             <td
               *ngIf="
