--- a/src/app/shared/components/reportes/reportes-contribuyentes/reportes-contribuyentes.component.html
+++ b/src/app/shared/components/reportes/reportes-contribuyentes/reportes-contribuyentes.component.html
@@ -34,12 +34,12 @@
 </div>
 
 
-<button type="button" (click)="rellenarTabla()" class="btn btn-primary">Generar Reporte/s</button>
+<button type="button" (click)="rellenarTabla()" class="btn btn-primary">Generar Reporte</button>
 <table class="table  table-Light table-bordered table-striped mt-3" *ngIf="mapaReportes.length>0">
   <thead class="table-estilo text-white">
     <tr >
         <th width="30%">Reporte</th>
-        <th width="30%"><i class="bi bi-download">Descargar</i></th>
+        <th width="30%">Descargar</th>
     </tr>
   </thead>
   <tbody>
