--- a/src/app/shared/components/reportes/reportes.component.css
+++ b/src/app/shared/components/reportes/reportes.component.css
@@ -1,5 +1,6 @@
 .table-estilo{
-  background-color: rgb(75, 69, 198);
+  background-color: #740432;/*rgb(75, 69, 198);*/
+  color: #c8c6bb;
 }
 
 .table-white{
@@ -12,7 +13,45 @@
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: rgb(75, 69, 198); /**#f1f1f1;*/
+  background-color: #740432;/*rgb(75, 69, 198); /**#f1f1f1;*/
+}
+
+.btn-primary {
+  color: #740432!important;
+  background-color: transparent!important;
+  background-image: none!important;
+  border-color: #740432!important;
+}
+
+.btn-primary:hover {
+  color: #c8c6bb!important;
+  background-color: #740432!important;
+  border-color: #740432!important;
+}
+
+.btn-primary:focus,
+.btn-primary.focus {
+  box-shadow: 0 0 0 .2rem #a3585b/*rgba(119, 204, 204, 0.5)*/!important;
+}
+
+.btn-primary.disabled,
+.btn-primary:disabled {
+  color: #c8c6bb!important;
+  background-color: transparent!important;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active,
+.show>.btn-primary.dropdown-toggle {
+  color: #740432!important;
+  background-color: #c8c6bb!important;
+  border-color: #740432!important;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 .2rem #a3585b/*rgba(119, 204, 204, 0.5)*/!important;
 }
 
 /* Style the buttons that are used to open the tab content */
