--- a/src/app/shared/components/reportes/linea-capturascss.scss
+++ b/src/app/shared/components/reportes/linea-capturascss.scss
@@ -12,7 +12,7 @@
       background-color: rgb(0, 41, 81);
   }
   .mat-form-field-required-marker {
-      color: rgb(0, 194, 58);
+      color: #740432!important; /*rgb(0, 194, 58);*/
   }
 
 
