volvi a ponewr el boton de descargar en rojo

--- a/src/app/shared/components/contribuyentes/contribuyentes.component.html
+++ b/src/app/shared/components/contribuyentes/contribuyentes.component.html
@@ -59,7 +59,7 @@
         href="{{
           urlEndPoint
         }}/api/reportes/listaContribuyenteFisica/exportarPDF"
-        class="btn btn-danger btn-sm ml-auto" style="background-color:blue; border-color: blue;"
+        class="btn btn-danger btn-sm ml-auto"
         ><i class="bi bi-printer"></i>Descargar lista</a>
     </div>
     <ng-template #PDFmoral>
