--- a/src/app/shared/components/cobrar-contribucion/cobrar-contribucion.component.html
+++ b/src/app/shared/components/cobrar-contribucion/cobrar-contribucion.component.html
@@ -92,7 +92,7 @@
           <div class="col-3">
             <div class="input-group">
               <span class="input-group-text">
-                  RFC
+                  R.F.C
               </span>
               <input [(ngModel)]="rfcContribuyente" name="rfc_contribuyente" type="text" class="form-control" placeholder="RFC contribuyente" disabled>
             </div>
@@ -140,8 +140,8 @@
         <div class="col-4 mt-3">
 
           <select *ngIf="!esLicencia else blockLicencia" class="form-select" aria-label="Default select example" [(ngModel)]="opcionSeleccionado" name="opcionSeleccionado">
-            <option selected value="0">Seleccionar Descuento</option>
-            <option value="10">10%</option>
+            <option class="option" selected value="0">Seleccionar Descuento</option>
+            <option class="option" value="10">10%</option>
             <option value="20">20%</option>
             <option value="30">30%</option>
             <option value="40">40%</option>
