--- a/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.html
+++ b/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.html
@@ -51,7 +51,7 @@
       </div>
       <div class="form-group row mt-3">
         <div class="col-sm-2">
-          <input type="button" class="btn btn-primary" (click)="irPasoUno()" value="  Cancelar  ">
+          <input type="button" class="btn btn-primary2" (click)="irPasoUno()" value="  Cancelar  ">
         </div>
         <div class="col-sm-2">
           <input type="button"  class="btn btn-primary" (click)="generarFactura()" value="Generar Linea de pago">
